# dlso

./: .gitignore  CMakeLists.txt  LL.md  README.md  app.cpp  shareddata.h
.cache/clangd/index/: Greet.cpp.BAAC35F90B4E3C11.idx  Greet.h.07BA81E5B37EE6E0.idx  Half.h.6516E4EFF872A98A.idx  Hello.cpp.708A34DA29F7F839.idx  Hello.cpp.CE2DE835E60463BA.idx  app.cpp.2D7BB8FF5184D671.idx  app.cpp.3F3553C717CE78EE.idx  definition.cpp.28AC7F509BD007F5.idx  halfapp.cpp.8559A37C3807BA70.idx  halfso.cpp.0AF15898AA290AA4.idx  inde.cpp.709BA2EF7E893B61.idx  sample.h.47E3F467645A31A1.idx  secondlib.cpp.F1DD1BAB964AE69B.idx  shareddata.h.88CA850E67CC613C.idx  somelib.cpp.C8BC3509F5019DC4.idx  test.cpp.B61601E78FFA0A3F.idx
dlopen/: CMakeLists.txt  SomeClass.h  sample.h
dlopen/RTLD_LOCAL/: CMakeLists.txt  app.cpp  dependent.cpp  first.cpp  second.cpp
dlopen/app/: CMakeLists.txt
dlopen/app/src/: app.cpp  halfapp.cpp
dlopen/dll/: CMakeLists.txt
dlopen/dll/src/: Hello.cpp
dlopen/greet/inc/: Greet.h
dlopen/greet/src/: Greet.cpp
dlopen/halfso/: CMakeLists.txt  Half.h  definition.cpp  halfso.cpp
dlopen/hello/: CMakeLists.txt
dlopen/hello/src/: Hello.cpp
dlopen/independentso/: CMakeLists.txt  inde.cpp
dlopen/test/: CMakeLists.txt  test.cpp
include/: SomeClass.h
secondlib/: CMakeLists.txt  secondlib.cpp
somelib/: CMakeLists.txt  somelib.cpp
src/: SomeClass.cpp  fun.cpp
